Scrollbar fixes

--- a/src/pages/Pool/styles.styl
+++ b/src/pages/Pool/styles.styl
@@ -117,3 +117,6 @@ input {
     background: #ccc;
   }  
 }
+.lpTokensContainer{
+ margin-right: 15px
+}
